--- a/views/random.erb
+++ b/views/random.erb
@@ -39,7 +39,7 @@
     </form>
     </div>
 
-    <div id= "link"><a href="/sets">LINK TO SETS</a>
+    <div id= "link"><a href="/">LINK TO SETS</a>
   </body>
 
 </html>
