trying to gets sets hash initialized

--- a/views/random.erb
+++ b/views/random.erb
@@ -22,24 +22,25 @@
     </div>
  -->
     <div class='videos'>
-    <iframe width="420" height="315" src= <%= result %> frameborder="0" allowfullscreen></iframe>
+      <iframe width="420" height="315" src= <%= result %> frameborder="0" allowfullscreen></iframe>
     </div>
     <br>
     <br>
     <div class='input'>
-    <form name="input" action = "#" method="post">
-    <label>
-     Add to the Fry & Laurie playlist!<br>
-     Submit the link to your favorite video— from YouTube only, please!
-     <br>
-     <br>
-    <input type="text" name="vidURL"><br>
-    </label>
-    <input type="submit" value="Submit!">
-    </form>
+      <form name="input" action = "#" method="post">
+        <label>
+         Add to the Fry & Laurie playlist!<br>
+         Submit the link to your favorite video— from YouTube only, please!
+         <br>
+         <br>
+        <input type="text" name="set">
+        <input type="text" name="vidURL"><br>
+        </label>
+        <input type="submit" value="Submit!">
+      </form>
     </div>
 
-    <div id= "link"><a href="/">LINK TO SETS</a>
+    <div id= "link"><a href="/sets">LINK TO SETS</a>
   </body>
 
 </html>
