--- a/views/home.erb
+++ b/views/home.erb
@@ -1,15 +1,19 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link href='http://fonts.googleapis.com/css?family=Alegreya' rel='stylesheet' type='text/css'>
+     <link href='http://fonts.googleapis.com/css?family=Ubuntu|Raleway|Alegreya' rel='stylesheet' type='text/css'>
     <title>Random Entertainment</title>
   </head>
 
   <body>
+  	<h1>Random Entertainment</h1>
 
-    <h1>Welcome to random entertainment— choose from our premade video playlists or create your own, then choose a playlist to watch in random order.</h1>
+    <div class='welcome'>
+    <p>Welcome to random entertainment</p>
+      <div id= 'description'>Choose from our premade video playlists or create your own below. Then choose a playlist to watch in random order!</div>
+    </div>
 
-    <div id= "link"><a href="/frylaurie">Watch Fry and Laurie!</a></div>
+    <div class= "links"><a href="/frylaurie">Watch Fry and Laurie!</a></div>
 
     <br>
 </body>
