--- a/views/sets.erb
+++ b/views/sets.erb
@@ -1,7 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link href='http://fonts.googleapis.com/css?family=Alegreya' rel='stylesheet' type='text/css'>
+   <link href='http://fonts.googleapis.com/css?family=Ubuntu|Raleway|Alegreya' rel='stylesheet' type='text/css'>
     <title>Random Fry and Laurie</title>
   </head>
 
